Photon (I20171201) JDT Patch for Groovy-Eclipse: JDT commit 8e40584